# ncc

./: INSTALL_MAC.md  Makefile  README.md  pyproject.toml  requirements-hf.txt
datasets/: ncc_dataset_datasheet.md  ncc_dataset_manifest.json  ncc_sft_dataset.jsonl
docs/: CHECKLIST_MAC.md  DATASET_TRACE_SPEC.md  EXPERIMENT_PROTOCOL.md  MODEL_PATH.md  RESULTS_INTERPRETATION_GUIDE.md  RESULTS_REPORT_TEMPLATE.md  SCIENTIFIC_BASES.md
experiments/: exp_01_intent_preservation.py  exp_02_memory_reactivation.py  exp_02b_memory_source_attribution.py  exp_02c_pure_memory_reactivation.py  exp_03_governance_block.py  exp_04_feedback_consolidation.py  exp_05_knowledge_memory_separation.py  exp_06_cognitive_dataset_export.py  exp_07_dataset_quality_gates.py  exp_08_scenario_generator_balancing.py  exp_08b_runtime_alignment_hotfix.py  exp_09_tiny_ncc_lm_training_dry_run.py  exp_10_tiny_sft_format_hf_adapter.py  exp_11_local_tiny_causal_lm_smoke_test.py  exp_12_generation_evaluation_harness.py  exp_13_base_vs_finetuned_model_comparison.py  exp_14_py311_training_runner.py  exp_14_real_hf_environment_doctor.py  exp_15_real_generations_eval_rerun.py  exp_16_safety_regression_repair_pack.py  exp_17_safety_repair_sft_merge_refinetune.py  exp_17b_safety_repair_coverage.py
ncc/: action.py  base_generation_runner.py  clarification.py  cli.py  dataset_balancer.py  dataset_export.py  dataset_quality.py  feedback.py  gap.py  generation_eval.py  governance.py  hf_adapter.py  hf_env_doctor.py  hf_training_runner.py  intent.py  knowledge.py  knowledge_revision.py  local_causal_lm.py  memory.py  (+19 more)
(+121 files in other folders)
